boulder/boulder/tests/compile_fail/function/ret_ty/consuming_semi.bo
# Mismatched types
# expected `u32`
# found `Empty`
# (8:
# (11:
# ^^^^^^

fn expected_expression(t: u32) -> u32 {
    2 + 3;
    2 - 1;
    t + 2;
}